[package]
name = "cfg-expr"
description = "A parser and evaluator for Rust `cfg()` expressions."
repository = "https://github.com/EmbarkStudios/cfg-expr"
version = "0.9.1"
authors = ["Embark <opensource@embark-studios.com>", "Jake Shadle <jake.shadle@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/cfg-expr"
homepage = "https://github.com/EmbarkStudios/cfg-expr"
keywords = ["cargo", "rustc", "cfg"]

[features]
default = []
# Allows parsing and handling of arbitrary target triples, including ones that
# are not builtin to rustc
targets = ["target-lexicon"]

[dependencies]
smallvec = "1.6"
target-lexicon = { version = "0.12.3", optional = true }

[dev-dependencies]
similar-asserts = "1.1"
